--- a/styles/practice.css
+++ b/styles/practice.css
@@ -7,6 +7,9 @@ body {
     font-family: "Work Sans", sans-serif;
 }
 
+body::-webkit-scrollbar {
+    display: none;
+  }
 
 .heading-title {
     color: #ffffff;
@@ -37,22 +40,22 @@ body {
     background-repeat: no-repeat;
     background-position: top center;
     height: 1080px;
-    width: 1920px;
+    width: 100%;
 }
 
 .btn-contact {
     border-radius: 5px;
     background: #fff;
     border: 0px;
-    padding: 20px 20px;
-    margin-left: 1517px;
+    width: 160px;
+    padding: 20px 25px;
+    margin-left: 1488px;
     margin-bottom: 200px;
     color: #005fac;
     text-align: right;
     font-size: 20px;
     font-weight: 600;
     margin-top: 0px;
-    margin-right: 255px;
 }
 
 main {
@@ -81,7 +84,7 @@ main {
     color: #444343;
     font-size: 16px;
     font-weight: 400;
-    margin-left: 130px;
+    margin-left: 148px;
     margin-top: 20px;
 }
 .middle {
@@ -95,4 +98,126 @@ main {
 
 .image {
     margin-top: 150px;
+}
+
+.third-head {
+    color: #151414;
+    text-align: center;
+    font-size: 40px;
+    font-weight: 700;
+    margin-top: 100px;
+    margin-bottom: 70px;
+}
+
+.plan {
+    display: flex;
+    align-items: center;
+}
+.my-plan-all-items {
+    margin-right: 30px;
+    text-align: center;
+}
+.skills {
+    color: #151414;
+    text-align: center;
+    font-size: 30px;
+    font-weight: 700;
+    width: 270px;
+    margin-bottom: 16px;
+}
+.skill-details {
+    color: #737272;
+    text-align: center;
+    font-size: 25px;
+    font-weight: 500;
+    margin-bottom: 130px;
+}
+.icon-image {
+    margin-bottom: 24px;
+}
+
+.image1 {
+    background: url("../images/watch.png");
+    height: 300px;
+}
+.last-middle-heading {
+    color: #fff;
+    font-size: 40px;
+    font-weight: 700;
+    margin-top: -260px;
+    margin-left: 60px;
+    margin-right: 620px;
+}
+.call-now {
+    padding: 20px 35px;
+    border: 0px;
+    border-radius: 5px;
+    color: #005fac;
+    text-align: center;
+    font-size: 20px;
+    font-weight: 600;
+    margin-left: 60px;
+    margin-top: 40px;
+}
+
+footer {
+    width: 100%;
+    height: 570px;
+    background: #151414;
+    margin-top: 140px;
+}
+.flexible {
+    display: flex;
+    justify-content: space-between;
+}
+.future {
+    color: #f8f8f8;
+    font-size: 50px;
+    font-weight: 700;
+    margin-top: 110px;
+    margin-bottom: 16px;
+}
+.footer-description {
+    color: #fff;
+    font-size: 20px;
+    font-weight: 400;
+    margin-bottom: 25px;
+    width: 485px;
+}
+.column1 {
+    margin-left: 210px;
+}
+.sub {
+    color: #fff;
+    font-size: 25px;
+    font-weight: 600;
+    margin-right: 430px;
+    margin-bottom: 30px;
+}
+
+input[type="email"] {
+    background: #151414;
+    padding: 25px 160px 25px 25px;
+    border: 1px solid white;
+    border-radius: 10px;
+    color: #ffffff;
+    font-size: 18px;
+    font-weight: 400;
+    margin-bottom: 20px;
+}
+input::placeholder,
+textarea::placeholder {
+    color: #ffffff;
+}
+.subscribe {
+    padding: 20px 35px;
+    border-radius: 8px;
+    background: #005fac;
+    color: #fff;
+    font-size: 20px;
+    font-weight: 600;
+    border: 0px;
+}
+.column2 {
+    margin-top: 140px;
 }
