--- a/styles/practice.css
+++ b/styles/practice.css
@@ -49,7 +49,7 @@ body::-webkit-scrollbar {
     border: 0px;
     width: 160px;
     padding: 20px 25px;
-    margin-left: 1488px;
+    margin-left: 1503px;
     margin-bottom: 200px;
     color: #005fac;
     text-align: right;
@@ -80,13 +80,19 @@ main {
     margin-top: 30px;
     margin-bottom: 0px;
 }
-.second-head-list {
+.checkmark-list {
     color: #444343;
     font-size: 16px;
     font-weight: 400;
-    margin-left: 148px;
+    margin-left: 130px;
     margin-top: 20px;
+    list-style: none;
 }
+.checkmark-list li:before {
+    content: '\2713';
+    margin-right: 8px; 
+}
+
 .middle {
     display: flex;
     gap: 60px;
